--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-﻿fastapi
-uvicorn
-python-dotenv
-PyJWT
-asgiref
-gunicorn
-passlib[bcrypt]
-python-multipart
+﻿fastapi==0.110.0
+uvicorn==0.27.1
+sqlalchemy==2.0.28
+pydantic==2.6.3
+pydantic-settings==2.2.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
+httpx==0.28.1
+python-dotenv==1.0.1
+gunicorn==21.2.0
