--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install uvicorn httpx gunicorn
+          pip install uvicorn httpx
 
       - name: Create env file
         run: |
@@ -30,12 +30,13 @@ jobs:
           echo "GITHUB_REDIRECT_URI=${{ secrets.GITHUB_REDIRECT_URI }}" >> .env
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
 
-      - name: Create Procfile
+      - name: Create static files
         run: |
-          echo "web: gunicorn wsgi:application" > Procfile
+          mkdir -p static
+          echo "API is deployed at https://ruslansintsov.github.io/rsp-t-api" > static/index.html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./ 
+          publish_dir: ./static 
